static/style.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
    font-family: sans-serif;
}

/* ---------- Standard Classes ---------- */

h2 {
	padding-bottom: 5px;
}

.col{
    display: flex;
    flex-direction: column;
}

.row{
    display: flex;
    flex-direction: row;
}

.sticky {
	display: block;
	position: fixed;
	width: 100%;
}

.top {
	top: 0;
	background-color: aqua;
}

main {
	padding-top: 80px;
	padding-left: 16px;
	padding-right: 16px;
	padding-bottom: 65px;
}

.bottom {
	bottom: 0;
}

a {
	text-decoration: none;
	color: black;
}

.no-pointer{
	pointer-events: none;
}

.flashes {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
	padding: 5px 0px;
}

.btn{
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 5px;
	margin: 5px;
	border: solid 1px black;
	border-radius: 5px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	-ms-border-radius: 5px;
	-o-border-radius: 5px;
}

.circle-btn{
	margin: 5px;
	height: 25px;
	width: 25px;
	text-align: center;
	line-height: 25px;
	border: solid 1px black;
	border-radius: 50px;
	-webkit-border-radius: 50px;
	-moz-border-radius: 50px;
	-ms-border-radius: 50px;
	-o-border-radius: 50px;
}

/* ---------- Mobile Nav Bar ---------- */
.desk-nav-bar {
	display: none;
}

.mobile-nav {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	line-height: 50px;
	padding: 10px 16px;
}

#burger-btn {
	height: 50px;
	width: 50px;
	line-height: 50px;
	text-align: center;
}

#closebars{
	font-size: 40px;
}

#bars{
	font-size: 30px;
}


.burger ul {
	display: flex;
	flex-direction: column;
	list-style: none;
	padding: 0px;
	margin: 0px;
}

.burger li {
	margin: 5px;
}

.burger ul li a {
	color: white;
	font-size: 25px;
}

/* ----------  Home page not logged in ---------- */

.cta {
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 100%;
}

.cta h2 {
	text-align: center;
}

.smallcta{
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 100%;
}

.smallcta p {
	text-align: center;
}

/* ---------- Task Card ---------- */

.task-card{
    list-style: none;
	width: 100%;
    border-radius: 15px;
    padding: 10px 16px;
    margin: 5px 0px;
    background-color: yellowgreen;
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    -ms-border-radius: 15px;
    -o-border-radius: 15px;
}

.task-card.open .task-body{
	display: flex;
	transition: height 500ms;
	-webkit-transition: height 500ms;
	-moz-transition: height 500ms;
	-ms-transition: height 500ms;
	-o-transition: height 500ms;
}

.task-card.open .arrow{
	transform: rotate(180deg);
	-webkit-transform: rotate(180deg);
	-moz-transform: rotate(180deg);
	-ms-transform: rotate(180deg);
	-o-transform: rotate(180deg);
	transition: transform 500ms;
	-webkit-transition: transform 500ms;
	-moz-transition: transform 500ms;
	-ms-transition: transform 500ms;
	-o-transition: transform 500ms;
}

.arrow{
	transform: rotate(0deg);
	-webkit-transform: rotate(0deg);
	-moz-transform: rotate(0deg);
	-ms-transform: rotate(0deg);
	-o-transform: rotate(0deg);
	transition: transform 500ms;
	-webkit-transition: transform 500ms;
	-moz-transition: transform 500ms;
	-ms-transition: transform 500ms;
	-o-transition: transform 500ms;
}

.small{
    border-left: 7px solid green;
}

.medium{
    border-left: 7px solid Pink;
}

.large{
    border-left: 7px solid Blue;
}

/* Task Card Header */

.task-header{
    justify-content: space-between;
    padding: 5px 0px;
}

.check-box{
	font-size: 25px;
}

.task-header-internal{
	justify-content: space-between;
	width: 100%;
}

.task-name{
	padding: 0px 10px;
	line-height: 30px;
}

.buttons{
	display: flex;
	flex-direction: row-reverse;
	justify-content: space-between;
	min-width: 25px;
}

.fa-exclamation-circle{
    margin: 0px 10px;
    font-size: large;
}

/* Task Card Body */

.task-body{
	height: 0px;
	justify-content: space-between;
	overflow: hidden;
	transition: height 300ms;
	-webkit-transition: height 300ms;
	-moz-transition: height 300ms;
	-ms-transition: height 300ms;
	-o-transition: height 300ms;
}

.description{
    width: 100%;
    padding: 10px 0px;
}

/* Information row of task description */

.info{
    justify-content: space-between;
    padding: 0px 0px;
}

.due-date{
    text-align-last: right;
}

.category{
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Task size */

.task-size{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 25px;
    width: 60px;
    border: #000 1px solid;
    border-radius: 15px;
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    -ms-border-radius: 15px;
    -o-border-radius: 15px;
}

.s-text{
    font-size: small;
    font-weight: 200;
    letter-spacing: 0.8px;
    line-height: 16px;
}

.m-text{
    font-size: normal;
    font-weight: 400;
    letter-spacing: 1px;
    line-height: 16px;
}

.l-text{
    font-size: large;
    font-weight: 800;
    letter-spacing: 1.2px;
    line-height: 16px;
}

/* Task Buttons */

.task-buttons{
	display: flex;
	width: 100px;
}

.task-btn{
	text-align: center;
	width: 50px;
}

/* ---------- Account ---------- */
.section{
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
}

.section-header{
	display: flex;
	justify-content: space-between;
	width: 100%;
	height: 30px;
	line-height: 30px;
}

.section-content{
	width: 100%;
}

.all-cats{
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
}

.categories{
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.cat-card{
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	width: 100%;
	border: solid black 1px;
	margin: 10px;
	border-radius: 15px;
	-webkit-border-radius: 15px;
	-moz-border-radius: 15px;
	-ms-border-radius: 15px;
	-o-border-radius: 15px;
}

.card-title{
	width: 100%;
	line-height: 25px;
}

.card-action{
	display: flex;
	padding: 5px;
}

/* ---------- forms ---------- */

.form-container{
	border: solid 1px black;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	padding: 10px;
}

.form-title{
	color: pink;
}

.form{
	width: 90%;
}

.form-field{
	display: flex;
	flex-direction: column;
	padding: 5px 0px;
}

.form-control{
	display: flex;
	justify-content: center;
	align-items: center;
	min-width: 50%;
	width: 181px;
}

.control{
	width: 100%;
}

.inline{
	flex-direction: row;
	justify-content: space-between;
}

.form-label{
	padding: 0.25rem 0px;
	width: 100px;
}

.control{
	padding: 5px;
	border: solid 1px gray;
	border-radius: 10px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	-ms-border-radius: 10px;
	-o-border-radius: 10px;
}

.select-size{
	display: flex;
	justify-content: space-around;
	padding: 5px;
	width: 100%;
}

.add-cat{
	display: flex;
	justify-content: flex-end;
	width: 100%;
	font-size: small;
	padding-right: 1.25rem;
}

.submit-button{
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 10px;
}

/* remove lists */
.no-list{
	list-style-type: none;
}

/* ---------- modal ---------- */
/* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal */
/* modal background */
.modal-background{
	position: fixed;
	z-index: 1;
	padding-top: 150px;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	background-color: rgba(0, 0, 0, 0.4);
}

/* modal content */
.modal{
	background-color: #fefefe;
	margin: auto;
	padding: 20px;
	border: 1px solid #888;
	border-radius: 20px;
	width: 80%;
	-webkit-border-radius: 20px;
	-moz-border-radius: 20px;
	-ms-border-radius: 20px;
	-o-border-radius: 20px;
}

.modal-title{
	margin: 5px;
}

.modal-par{
	display: flex;
	justify-content: center;
	align-items: center;
	margin: 5px;
}

/* The Close Button */
.close {
	color: #aaaaaa;
	float: right;
	font-size: 28px;
	font-weight: bold;
}

.close:hover,
.close:focus {
	color: #000;
	text-decoration: none;
	cursor: pointer;
}

/* modal buttons */

.modal-btns{
	display: flex;
	justify-content: center;
	align-items: center;
}

.m-btn{
	width: 50px;
}

/* ---------- footer ---------- */

.footer {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	padding: 10px;
	background-color: fuchsia;
}

/* ---------- Progress Bar ---------- */
#progress-bar{
	display: flex;
	width: 100%;
	height: 30px;
	border: solid 1px black;
	margin-right: 10px;
	border-radius: 7px;
	-webkit-border-radius: 7px;
	-moz-border-radius: 7px;
	-ms-border-radius: 7px;
	-o-border-radius: 7px;
}

#progress{
	line-height: 30px;
	padding-left: 10px;
	background-color: blue;
	border-radius: 7px;
	-webkit-border-radius: 7px;
	-moz-border-radius: 7px;
	-ms-border-radius: 7px;
	-o-border-radius: 7px;
}

/* ---------- Medium devices ---------- Tablets, 768px and Up ---------- */
@media (min-width: 768px) {
	main {
		padding-top: 90px;
	}

	.mobile-nav-bar {
		display: none;
	}

	/* ---------- nav bar ---------- */

	.desk-nav-bar {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		align-items: center;
		padding: 10px 16px;
	}

	.desktop-nav ul {
		display: flex;
		flex-direction: row;
		justify-content: flex-end;
		list-style: none;
		padding: 0px;
		margin: 0px;
	}

	.desktop-nav li {
		padding: 10px;
		border: solid 1px black;
		border-radius: 5px;
		margin: 5px;
		-webkit-border-radius: 5px;
		-moz-border-radius: 5px;
		-ms-border-radius: 5px;
		-o-border-radius: 5px;
	}

	/* ----------  Home page not logged in ---------- */

.cta {
	display: flex;
	flex-direction: column;
	align-items: center;
}

.smallcta{
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	width: 50%;
}

.cta-right {
	display: flex;
	justify-content: center;
	margin-left: 50%;
}

.cta-left {
	display: flex;
	justify-content: center;
	margin-right: 50%;
}
}

/* ---------- master categories ---------- */

.hidden {
    display: none;
}

